# map_solver

./: Cargo.toml  README.md  cheat_vis.mtx  ptr_mat.mtx  solution.mtx
ideal_data/: answer.mtx  answer_2_ch.mtx  answer_32_ch.mtx  duplicate_ch.py  pix.mtx  ptr_2_ch.mtx  ptr_32_ch.mtx  ptr_matrix.mtx  tod.mtx  tod_2_ch.mtx  tod_32_ch.mtx
py/: solve_with_noise.py
src/: brute.rs  brute_mch.rs  brute_mo.rs  lib.rs  madam.rs  main.rs  mathematica.rs  mcmc.rs  mcmc2d.rs  mcmc2d_func.rs  mcmc_func.rs  mcmc_func2.rs  naive.rs  naive_mo.rs  noise.rs  pl_ps.rs  ps_model.rs  utils.rs
