[dependencies]
clap = '2.33.0'
ndarray = '0.13.0'
num-complex = '0.2.3'
num-traits = '0.2.10'
sprs = '0.7.1'

[dependencies.fftn]
path = '../fftn'

[dependencies.fitsimg]
git = 'https://github.com/astrojhgu/rust_fitsimg.git'

[dependencies.linear_solver]
path = '../linear_solver'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'map_solver'
version = '0.1.0'
