[dependencies]
clap = '2.33.0'
ndarray = '0.14.0'
num-complex = '0.3.1'
num-traits = '0.2.11'
sprs = '0.7.1'
rand = '0.8.3'
rand_distr='0.4.0'
rand_core='0.6.3'
rayon='1.3.0'
ctrlc='3.1.4'
fftw = '0.7.0'


[dependencies.fitsimg]
git = 'https://github.com/astrojhgu/rust_fitsimg.git'

[dependencies.linear_solver]
git = 'https://github.com/astrojhgu/linear_solver.git'

[dependencies.scorus]
git = 'https://github.com/astrojhgu/scorus.git'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'map_solver'
version = '0.1.0'
